--- a/WPF_FrontEnd/App.xaml
+++ b/WPF_FrontEnd/App.xaml
@@ -2,7 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:fa="http://schemas.fontawesome.io/icons/"
-             StartupUri="LoginWindow.xaml">
+             StartupUri="Windows/LoginWindow.xaml">
     <Application.Resources>
 
 
