--- a/WPF_FrontEnd/Windows/LoginWindow.xaml
+++ b/WPF_FrontEnd/Windows/LoginWindow.xaml
@@ -13,7 +13,7 @@
 
             <StackPanel Grid.Row="0" Margin="10">
                 <Label Content="Login:" Margin="0 0 5 0" />
-                <TextBox />
+                <TextBox x:Name="LoginTextBox" />
             </StackPanel>
 
             <StackPanel Grid.Row="1" Margin="10">
@@ -21,11 +21,10 @@
                 <PasswordBox x:Name="PasswordTextBox" />
             </StackPanel>
 
-            <Button Content="Login" Grid.Row="2" HorizontalAlignment="Center" Margin="0,10,0,10" Width="100" Click="Button_Click" />
-
+            <Button Content="Login" Grid.Row="2" HorizontalAlignment="Center" Margin="0,10,0,10" Width="100" Click="LoginButton_Click" />
             <TextBlock Grid.Row="3" HorizontalAlignment="Center" Margin="5">
             <Run Text="If you don't have an account, please " />
-            <Run TextDecorations="Underline" Text="register" FontWeight="Bold" />
+            <Button Content="register" FontWeight="Bold" Click="RegButton_Click" Margin="-6,0,0,-6" Style="{StaticResource {x:Static ToolBar.ButtonStyleKey}}" HorizontalAlignment="Left" VerticalAlignment="Bottom"/>
             </TextBlock>
             <Button Content="X" Width="20" Height="20" HorizontalAlignment="Right" VerticalAlignment="Top"
                 Margin="5" Click="CloseButton_Click" Background="#FFE7F6FF" />
