--- a/WPF_FrontEnd/Windows/LoginWindow.xaml
+++ b/WPF_FrontEnd/Windows/LoginWindow.xaml
@@ -1,8 +1,8 @@
 ﻿<Window x:Class="WPF_FrontEnd.LoginWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Login" Height="220" Width="300" ResizeMode="NoResize" WindowStyle="None" MouseDown="Window_MouseDown">
-    <Border CornerRadius="20" BorderBrush="#C73F69" BorderThickness="2" Padding="6" Background="GhostWhite">
+        Title="Login" Height="220" Width="300" ResizeMode="NoResize" WindowStyle="None" MouseDown="Window_MouseDown" Background="Transparent" AllowsTransparency="True">
+    <Border CornerRadius="20" BorderBrush="#C73F69" BorderThickness="2" Padding="6" Background="WhiteSmoke">
         <Grid Background="Transparent">
             <Grid.RowDefinitions>
                 <RowDefinition Height="Auto" />
