added events and proper binding of variables

--- a/WPF_FrontEnd/UserControls/Item.xaml
+++ b/WPF_FrontEnd/UserControls/Item.xaml
@@ -52,9 +52,9 @@
             <Border Background="White" CornerRadius="5" Padding="0 4">
                 <StackPanel>
 
-                    <local:MenuButton Icon="Check" Caption="Check"/>
-                    <local:MenuButton Icon="Pencil" Caption="Edit"/>
-                    <local:MenuButton Icon="Trash" Caption="Delete"/>
+                    <local:MenuButton Icon="Check" Caption="Check" PreviewMouseDown="CheckButton_Click"/>
+                    <local:MenuButton Icon="Pencil" Caption="Edit" PreviewMouseDown="EditButton_Click"/>
+                    <local:MenuButton Icon="Trash" Caption="Delete" PreviewMouseDown="DeleteButton_Click"/>
 
                 </StackPanel>
             </Border>
